Fix background overflow, alternative width and origigin/destination title

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,19 +1,19 @@
+body {
+  background-color: #ebebe3;
+}
 .App {
   text-align: center;
 }
 
 .App-header {
-  background-color: #ebebe3;
-  min-height: 100vh;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
   font-size: calc(10px + 2vmin);
   color: #333;
 }
 
 .App-link {
   color: #61dafb;
+}
+
+h2 {
+  font-weight: normal;
 }
