--- a/frontend/src/components/Alternatives/Alternatives.css
+++ b/frontend/src/components/Alternatives/Alternatives.css
@@ -3,6 +3,7 @@
   background-color: #ebebe3;
   top: 0;
   z-index: 10;
+  width: 100%;
 }
 
 .Alternative {
