--- a/frontend/src/components/FindTrain/FindTrain.css
+++ b/frontend/src/components/FindTrain/FindTrain.css
@@ -1,4 +1,5 @@
 .InputField {
+  margin: 20px;
   font-size: 20px;
   padding: 15px;
   border-radius: 7px;
